kubernetes/test/app-test-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-flask-app
  labels:
    app: test-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-flask-app
  template:
    metadata:
      labels:
        app: test-flask-app
    spec:
      containers:
        - name: test-flask-app
          imagePullPolicy: Always
          image: username/api:1.0
          command: ['python3', 'test_api.py']  
          ports:
          - name: http
            containerPort: 5000
          env:
          - name: LOG_LEVEL
            value: DEBUG
