kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-worker
  labels:
    app: test-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-worker
  template:
    metadata:
      labels:
        app: test-worker
    spec:
      containers:
        - name: test-worker
          imagePullPolicy: Always
          image: qihangshi2475/api:1.0
          command: ["python3", "test_worker.py"]
          env:
           - name: LOG_LEVEL
             value: DEBUG
