kubernetes/test/app-test-ingress-flask.yml

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test-flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "mitragaurav10.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: test-flask-app-nodeport-service
              port:
                  number: 5000
