kubernetes/test/app-test-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-flask-app-service
spec:
  type: ClusterIP
  selector:
    app: test-flask-app
  ports:
  - name: test-flask-app
    port: 5000
    targetPort: 5000
