kubernetes/test/app-test-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: test-redis-db-service
spec:
  type: ClusterIP
  selector:
    app: test-redis-db
  ports:
  - name: test-redis-db
    port: 6379
    targetPort: 6379
